--- a/weekly/tt/1f.md
+++ b/weekly/tt/1f.md
@@ -1,6 +1,18 @@
 # Thanatos Tower 1st Floor
 
+## Boss
+
+Valkyrie  
+HP: 25M / 70M / 300M
+Element: Holy  
+Race: 
+Size: Large
+100% def/mdef% (a.k.a. need 200% ignore)
+
 ## General Mechanics
+
+The first floor boss 
+
 
 ## Difficulties
 
