--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -1,1 +1,10 @@
 # Thanatos Tower 2nd Floor
+
+## Boss
+
+**Tesseract**  
+HP: 36M / 120M / 450M  
+Element: **Neutral**  
+Race: 
+Size: **Large**
+100% def/mdef% (a.k.a. need 200% ignore)
