--- a/weekly/tt/3f.md
+++ b/weekly/tt/3f.md
@@ -1,1 +1,10 @@
 # Thanatos Tower 3rd Floor
+
+## Boss
+
+**Sorrow**  
+HP: 80M / 200M / 600M  
+Element: **Ghost**  
+Race: 
+Size: **Large**
+100% def/mdef% (a.k.a. need 200% ignore)
