--- a/weekly/tt/4f.md
+++ b/weekly/tt/4f.md
@@ -1,1 +1,8 @@
 # Thanatos Tower 4th Floor
+
+**Thanatos**  
+HP: 100M / 250M / 800M
+Element: **Dark**  
+Race: 
+Size: **Large**
+100% def/mdef% (a.k.a. need 200% ignore)
