--- a/weekly/tt/1f.md
+++ b/weekly/tt/1f.md
@@ -11,13 +11,63 @@ Size: Large
 
 ## General Mechanics
 
-The first floor boss 
+The first floor boss has 2 "phases", and it can go back from the first to the second phase. In the first phase, there will be 4 crystal pillars on the side of the map. The objective is to break these pillars, make sure they don't get repaired, and when the pillars are broken, the valkyrie can get killed. You lose when the team is dead, or when the valyrie reaches 100%.
 
+The valkyrie has a skill where it puts a red area on the floor. This red area will damage you when you stand on it, and it will bring the energy meter of the valk up. When the energy reaches 100%, the party loses. This is why it is better to kite the valkyrie around in the first phase, to make sure it does not stay on the red zone.
+
+You start off with either an RG or an AB kiting the valkyrie at the top of the map. In the middle of the map, a guard will spawn called 'blade'. The blade will have a color, either blue or red, and your team has to bring it to a crystal of the opposite color (red blade to blue pillar, blue blade to red pillar). It is best to break the bottom pillars first, so you'll be on either the topleft or topright crystal pillar last. When the blade is killed, it will explode, and the explosion will break the pillar. A new blade will spawn in the center of the map, together with an overlord. The overlord will try to repair the pillar, so kill it before moving the new blade. When all 4 pillars are broken, the valkyrie becomes vulnerable and can be killed.
+
+While the valkyrie is vulnerable, it will spawn big wheels that fly all over the map which will strip your equipment when you touch it. It will also do line attacks, so make sure you avoid these. Kill the Valkyrie quickly and you should be done with first floor.
 
 ## Difficulties
 
 ### Novice
 
+Nothing special on novice.
+
+- Clear the initial monsters to start the fight, including the broken guard and the **TODO**
+- When the tank moves to the valkyrie, the game starts and a blade will spawn
+- Let the tank taunt the blade
+- Kill the blade on top of the platform
+- Kill the overlord in the center of the map
+- Repeat 3 times
+- Kill the Crystal Immolator
+- Everybody moves to the valkyrie in the top of the map
+- Kill the valkyrie while dodging the big shuriken
+
 ### Brave
 
+On Brave, the crystal pillars will have a shield on them that needs to be broken before exploding the blade. After a little while, the shield respawns, so make sure to break the shield when the blade is on the platform.... not too early, not too late
+
+- Clear the initial monsters to start the fight, including the broken guard and the **TODO**
+- When the tank moves to the valkyrie, the game starts and a blade will spawn
+- Let the tank taunt the blade
+- Kill the shield on the pillar
+- Kill the blade on top of the platform
+- Kill the overlord in the center of the map
+- Repeat 3 times
+- Kill the Crystal Immolator
+- Everybody moves to the valkyrie in the top of the map
+- Kill the valkyrie while dodging the big shuriken
+
+
 ### Legend
+
+## Tips
+
+- Make sure to kill the overlords and the crystal immolators quickly, before they can repair the pillars
+- On brave difficulty, if you can kill the valk before the second crystal immolator spawns you should have enough DPS to easily clear floor 1-4
+- Make sure you stay away from the blades as they explode, especially if you have lower HP
+- DPS should **not** attack the blade until it is at the platform. This will help the tank drag the blade to the right platform
+
+## Roles
+
+### DPS
+
+### RG
+
+### AB
+
+### Mechanic
+
+### Shotcalling
