Finished the text part of TT1

--- a/weekly/tt/1f.md
+++ b/weekly/tt/1f.md
@@ -2,7 +2,7 @@
 
 ## Boss
 
-Valkyrie  
+Valkyrie Rathgricy
 HP: 25M / 70M / 300M
 Element: Holy  
 Race: 
@@ -50,8 +50,46 @@ On Brave, the crystal pillars will have a shield on them that needs to be broken
 - Everybody moves to the valkyrie in the top of the map
 - Kill the valkyrie while dodging the big shuriken
 
-
 ### Legend
+
+On legend, this floor becomes a LOT more difficult. The valkyrie has a lot more HP and a lot of things will happen that instantly kill you. A few things:
+
+- The valkyrie will cast a chain-skill that roots players in place. It will 'randomly' pick a player, that player will get an icon over their head, and after 5 seconds or so that player will get locked in place. To prevent being chained, run on top of the red circle the valkyrie as soon as the icon appears over your head.
+
+  This is however, near impossible, so we will use a glitch in the game, called 'chain bait'. The order of characters on who the chain is cast is not random, but it is a preset list, that gets determined when you enter the dungeon. The list gets shuffled everytime something happens with the party, like someone going offline/online or entering/leaving the instance. We can however, manipulate the order, so that only one person will get chained, the so-called chain-bait.
+
+  To select the chain-bait character, let that person come in after the rest. Click the NPC to go in, everybody except the chain-baiter clicks on accept, and the leader will go in, without the chain-baiter accepting nor rejecting the popup. After everybody is in (make sure everybody is loaded by letting everybody walk to the entrance), the chain-baiter can click on someone and enter the instance
+
+  The Chain-baiter will go to the top of the map, together with the tank. The tank will let the valkyrie place a red circle on the floor, preferably on the side, and the chain-baiter will stand next to it. The tank should keep the valkyrie clear from the chain-baiter afterwards, so keep a bit of distance between the two. If everything worked out, the chain-baiter should get chained first, step on the fire for about 3-4 seconds, and get away from the fire again. This repeats until all the crystal pillars are broken. If the chain-baiter dies and another person gets the chain, or gets chained, the baiting won't work anymore and you'll have to wipe and restart the dungeon. You won't have to exit the dungeon, just restart it as normal. If the chain-bater did not get the chain first, let everybody leave and retry.
+
+  On some clients, the chain icon does not show. You can tell you will get chained by a flinching animation (as if you are being attacked). Make sure you stand still next to the red circle so you can actually see the flinching animation. Also, some costumes (like the kumamon t-shirt) will not show the flinch animation clearly, so it is recommended to go to your default class costume
+
+* The explosions from the blade will kill the tank. To prevent this from happening, make sure to cast faith pray on the tank before the blade explodes, and everybody should stand clear of the explosion. You only get 10 resurrections, so don't waste them on these preventable deaths. Also, the cooldown on faith pray will be too long for one AB to cast every time, so make sure you alternate and agree on which AB uses FP first
+* When walking from pillar to pillar, do not cross the center. The valkyrie has a bigger detection range, so it will go down if people cross the center of the map. Keep at the bottom of the map as much as possible, but do make swift movements
+* From time to time, the valkyrie will summon Valkyrie Rathgricy Avatars. These avatars can do 2 attacks, a ranged line attack, and a direct attack. To prevent any deaths, let the ABs cast Light Shield for the line attacks, and let the mechanics cast Neutral Barrier, as soon as these avatars spawn. Also, when breaking the shields and killing the blades, make sure the ABs cast light shield at an appropriate distance. If you are not stacked together at the crystal pillar (when moving to the next pillar or when killing the overlord), just keep moving, keep distance and don't get on top of the lines
+* When all 4 pillars are broken, it's time to kill the valkyrie. The best way to do this is to have everybody stack on the place where the last crystal was, with the backup tank in front of the stairs to the pillar, and the main tank tanking the valkyrie either below or on top of the platform. The job of the backup tank is to make sure the valkyrie does **not** come on top of the platform, because if she casts the red circle under the stack, it's game over. By being on the platform, there's a lower chance of being hit by the shuriken. The ABs should alternate faith praying the tank to keep him alive, cast light shields on the party and if possible put down safety walls. The mechanic should cast neutral barrier when the avatars appear to block their damage. Keep the tank alive, the DPS high, and victory should be yours
+* We have ignored the Crystal Immolater in our runs. It seems it does not repair the crystal pillars at the moment.
+* If the tank gets chained during the final part of the fight and can't move, let the other tank take over. Just make sure the valk does not come on top of the platform
+* It is a good option to convert the valkyrie to water element. Discuss this with your team, and based on the party members it might be worth converting
+
+To summarize:
+
+- Talk to the NPC to enter the dungeon
+- Everybody except the chain-bait should accept and enter, the chain-bait should wait
+- Everybody moves to the entrance of the arena
+- The chain-bait comes in
+- Tank and chain-bait go to the top to start the fight
+- The other tank taunts the blade and lures it to the right platform, all the DPS move below that platform
+- Kill the shield on the pillar
+- Cast faith pray on the tank
+- Kill the blade on top of the platform (but keep your distance)
+- Kill the overlord that spawns from the center of the map (but do not go to the center)
+- Repeat 3 times
+- Move on top of the platform where the last crystal pillar was. Chain-bait runs on top of the platform ASAP, before he gets chained somewhere randomly
+  Tank that lured the blades moves in front of the platform
+  Tank that baited the valkyrie moves besides the platform and keeps tanking
+- When avatars spawn, cast neutral barrier and light shields
+- Kill it
 
 ## Tips
 
@@ -59,15 +97,55 @@ On Brave, the crystal pillars will have a shield on them that needs to be broken
 - On brave difficulty, if you can kill the valk before the second crystal immolator spawns you should have enough DPS to easily clear floor 1-4
 - Make sure you stay away from the blades as they explode, especially if you have lower HP
 - DPS should **not** attack the blade until it is at the platform. This will help the tank drag the blade to the right platform
+- Turn character models off for this floor. It will allow you to see the light shields better. Also effects can be set to low or off
 
 ## Roles
 
 ### DPS
 
+- Make sure you are appropriately equipped. There are plenty of options for cards, but you can think about
+  - Minorous Card
+  - Siroma Card, Roween Card, Water Elemental Card, if you are converting
+  - Cornus Card for 5% more damage to holy monsters
+  - Make sure you have enough ignore defense
+  - Stick together. Stack on top of each other when breaking the crystal pillars, so the light shield will protect everybody
+
 ### RG
+
+- Ask furcik what to do, he knows best
 
 ### AB
 
+- Light shield and faith pray are essential. Make sure you have them equipped
+- Bring plenty of items for safety walls and to plant trees
+- Communicate with the other AB to alternate your faith prays. Do a countdown if needed
+
+### Chain Baiter
+
+- The circles do fire damage, equip accordingly to survive staying on them for several seconds. Think about Pasana Card and other cards to reduce fire damage
+- Call out if you die or get chained. It's no shame, and if you wipe quick, you'll finish the run quicker
+- Learn to read the signs for chaining, this takes some practice
+
 ### Mechanic
 
+- Whenever the avatars spawn, cast your neutral barrier and get as many people in there as you can
+
 ### Shotcalling
+
+- Call people together to the left or right side, depending on the color of the blade
+- (Legend) Remind people to stack when killing the blade, in case you see people outside of the light shield
+- Remind people to kill the overlord, and tell them where the overlord is going
+- (Legend) Call out the faith pray to protect the tank when killing the blade
+- (Legend) At the last pillar, call out to the tank kiting the valkyrie which platform you will go on
+- (Legend) Just before the last blade dies, call the chain-baiter to come to the platform, together with the tank kiting the valkyrie
+- (Legend) Call out the shields for the avatars. A simple 'shields up' should  suffice, the ABs and mechanics should know what to do
+- (Legend) Keep an eye on the tank in the last phase, call out resses
+- Keep the spirit high :)
+
+## Special Drops
+
+- Mini Gryphon Egg
+- Valkyrie Crown
+- Valkyrie's Wings
+- (Legend) Angel Snow Feather
+- (Legend) Valkyrie Rathgricy Card
