Small text fix (thanks bunny)

--- a/weekly/tt/1f.md
+++ b/weekly/tt/1f.md
@@ -13,7 +13,7 @@ Size: Large
 
 The first floor boss has 2 "phases", and it can go back from the first to the second phase. In the first phase, there will be 4 crystal pillars on the side of the map. The objective is to break these pillars, make sure they don't get repaired, and when the pillars are broken, the valkyrie can get killed. You lose when the team is dead, or when the valyrie reaches 100%.
 
-The valkyrie has a skill where it puts a red area on the floor. This red area will damage you when you stand on it, and it will bring the energy meter of the valk up. When the energy reaches 100%, the party loses. This is why it is better to kite the valkyrie around in the first phase, to make sure it does not stay on the red zone.
+The valkyrie has a skill where it puts a red area on the floor. This red area will damage you when you stand on it, and if the valkyrie stands on it, the  energy meter of the valk will go up. When the energy reaches 100%, the party loses. This is why it is better to kite the valkyrie around in the first phase, to make sure it does not stay on the red zone.
 
 You start off with either an RG or an AB kiting the valkyrie at the top of the map. In the middle of the map, a guard will spawn called 'blade'. The blade will have a color, either blue or red, and your team has to bring it to a crystal of the opposite color (red blade to blue pillar, blue blade to red pillar). It is best to break the bottom pillars first, so you'll be on either the topleft or topright crystal pillar last. When the blade is killed, it will explode, and the explosion will break the pillar. A new blade will spawn in the center of the map, together with an overlord. The overlord will try to repair the pillar, so kill it before moving the new blade. When all 4 pillars are broken, the valkyrie becomes vulnerable and can be killed.
 
