--- a/weekly/tt/3f.md
+++ b/weekly/tt/3f.md
@@ -8,3 +8,35 @@ Element: **Ghost**
 Race: 
 Size: **Large**
 100% def/mdef% (a.k.a. need 200% ignore)
+
+## General Mechanics
+
+
+
+## Difficulties
+
+### Novice
+
+### Brave
+
+
+### Legend
+
+
+## Tips
+
+
+## Roles
+
+### DPS
+
+### RG
+
+### AB
+
+
+### Shotcalling
+
+
+## Special Drops
+
