Added logo, worked some feedback into 1F

--- a/weekly/tt/1f.md
+++ b/weekly/tt/1f.md
@@ -122,7 +122,8 @@ To summarize:
 
 ### Chain Baiter
 
-- The circles do fire damage, equip accordingly to survive staying on them for several seconds. Think about Pasana Card and other cards to reduce fire damage
+- The common classes for chain baiting are Warlock and Archbishop. Warlocks have white barrier to negate any damage done by the fire puddles, and Archbishops can outheal the fire damage for a while
+- The circles do fire damage, equip accordingly to survive staying on them for several seconds. Think about **Pasana Card** and other cards to reduce fire damage
 - Call out if you die or get chained. It's no shame, and if you wipe quick, you'll finish the run quicker
 - Learn to read the signs for chaining, this takes some practice
 
@@ -131,6 +132,16 @@ To summarize:
 - Whenever the avatars spawn, cast your neutral barrier and get as many people in there as you can
 
 ### Shotcalling
+
+Legend entry:
+
+- (Legend) When the entry dialog opens, make sure everybody clicks ready except for the chain baiter
+- (Legend) Party leader clicks accept and everybody gets teleported in
+- (Legend) Everybody walks to the circle in the bottom of the arena, but do **not** start the battle
+- (Legend) When you see everybody has moved (this means they finished loading), call in the chain baiter
+- (Legend) Wait for the chain baiter to join up and star the battle
+
+If, during the battle, anyone besides the chain baiter gets chained, it is better to restart the battle. If you notice the chain baiter does not get the chain bait, call everybody to leave the map and do the entry process again.
 
 - Call people together to the left or right side, depending on the color of the blade
 - (Legend) Remind people to stack when killing the blade, in case you see people outside of the light shield
