Made a start on 2F description

--- a/weekly/tt/1f.md
+++ b/weekly/tt/1f.md
@@ -7,7 +7,7 @@ HP: 25M / 70M / 300M
 Element: Holy  
 Race: 
 Size: Large  
-100% def/mdef% (a.k.a. need 200% ignore)
+Recommended settings: character models off, effects off, protect party off
 
 ## General Mechanics
 
