--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -7,4 +7,76 @@ HP: 36M / 120M / 450M
 Element: **Neutral**  
 Race: 
 Size: **Large**
-100% def/mdef% (a.k.a. need 200% ignore)
+Recommended settings: character models on, effects off, protect party on
+
+## General Mechanics
+
+The tesseract is a non-moving MVP that stays at the center of the map. The main theme of this floor is **lasers**. When you arrive on this floor, there will be a couple of smaller monsters spawned. When they are killed, the real challenge starts. This MVP has 5 phases. The phases start when the tesseract's HP drops below a certain percentage
+
+- 80% - 100% - Phase 1
+- 60% - 79% - Phase 2
+- 40% - 59% - Phase 3
+- 20% - 39% - Phase 4
+- 1% - 19% - Phase 5
+
+Out of these phases, only phase 5 is really different. The first 4 phases are all very similar, but get a bit more difficult because the MVP will do more different attacks. The attacks the MVP does, depend on the difficulty and phase of the boss, so this guide will go by attack
+
+### Circle attack ()
+
+One of the more basic attacks the MVP does. It will summon a number of circles on the floor, that explode after a few seconds. Make sure you get off these circles before they explode. These circles will appear on any difficulty, and in any phase (1,2,3,4,5)
+
+### Ceiling Laser ()
+
+Once in a while, a laser will come from the sky and start chasing a random player. This player will have a flame icon over their head, and is quite obvious to see. You can see it on other players, if you have character display enabled. If you have the laser on you, you have an important task. Some people will be caged (again, you can only see this if you have character display enabled), and to free them you have to run the laser over their cage. Also, sometimes, two people will be linked together by a laser. This link can be broken by having the laser that comes from the sky pass through this link. This can be a bit tedious to break, as it sometimes does not register, but keep trying to break this laser link. The ceiling laser will appear in phases 1,2,3 and 4
+
+This laser also deals some damage to players, if they are hit. On novice and brave, this damage is not too bad, but on legend difficulty, it is around 25% of the HP of a DPS. This means that on legend difficulty, if you have the laser on you, do **not** let the laser cross your party if they are stacked, or it can potentially wipe them. Also make sure you keep moving (can be a small circle), to make sure you don't die yourself.
+
+### Cage ()
+
+Sometimes, the laser will put a cage on a random person. This cage will prevent you from moving around. On novice and brave this can be a nuisance, on legend this is lethal, as you cannot dodge the circle attacks while being caged. Call out that you're caged, or have the shotcaller call out the caged people, and let the person with the laser on them break them free as soon as possible. While caged, you can still attack the MVP, so make sure you always stay in range so you can continue attacking.. The cages appear in phase 1,2,3 and 4, in brave and legend difficulty
+
+### Laser Link Connection ()
+
+Once in a while, a laser link between 2 players will appear. This link can only be broken by the ceiling laser. The laser link has 2 effects, it damages both players and it slows down both players. The damage is dependant on the distance between the two players, so try to stay together as much as you can.
+
+On novice and brave, the damage done is managable, on legend it is not. So try to coordinate and don't go far apart, before the links start. Links can appear in all difficulties, on phase 1,2,3 and 4. In legend difficulty they can also appear on the 5th floor.
+
+### Laser Wall ()
+
+In phase 2,3,4 on brave and legend difficulty, a wall of lasers can appear that goes from one side of the screen to the other side, covering half of the map. These lasers instantly kill anyone that touches them, so it is important to avoid them. Unfortunately, currently they are not always visible on the screen, or can appear very late. To see the lasers, keep the minimap opened. The lasers will show as a little red dot, going from one side of the screen to the other side. Make sure to be on the other side
+
+### Pewpew
+
+Sometimes the MVP will just do an attack on players. Tanks should taunt the MVP to prevent it from sniping out the DPS
+
+### Summon ads
+
+Once in a while, the MVP will spawn monsters. Make sure you kill these monsters by having protect party on. They can do some damage, but in phase 1 through 4 they don't really pose a threat.
+
+### Gravitational Bodies
+
+In the later phases (4th and 5th phase **TODO: CHECK IF 3RD PHASE**), gravitational bodies will spawn around the map. These gravitational bodies are small enemies that have a big circle around them. This circle grows over time if they stay alive. THe gravitational body will do two attacks. One of the attacks pulls players in the circle towards the gravitational body, and the other attack damages the players nearby. If a gravitational body appears, recommended to stop attacking the MVP and kill the gravitational body as soon as possible
+
+### Phase 5
+
+In the last phase, at 19% HP, the gameplay actually changes, and your team has to collect 5 keys to finish off the tesseract MVP. The keys spawn in blue orbs around the map, and have to be collected and brought to the siren NPC in front of the tesseract. Attacking the tesseract in this does not do any damage, but ads and gravitational bodies will spawn in this phase, so try to kill these if possible. Gravitational bodies can stack up quite fast in this phase. Make sure you spread out the team, so you can collect the keys quickly. In legend difficulty however, you can get a laser link between players, so it can be very dangerous to split up.
+
+## Difficulties
+
+### Novice
+
+### Brave
+
+### Legend
+
+## Tips
+
+## Roles
+
+### DPS
+
+### AB
+
+### Tank
+
+### Shotcaller
