Added some gifs to 2nd floor

--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -21,27 +21,39 @@ The tesseract is a non-moving MVP that stays at the center of the map. The main 
 
 Out of these phases, only phase 5 is really different. The first 4 phases are all very similar, but get a bit more difficult because the MVP will do more different attacks. The attacks the MVP does, depend on the difficulty and phase of the boss, so this guide will go by attack
 
-### Circle attack ()
+### Arcane Bomb (Circle Bomb)
+
+![arcane_bomb]({{site.baseurl}}/assets/images/tt/2f/arcane_bomb.gif)
+{: .float-right}
 
 One of the more basic attacks the MVP does. It will summon a number of circles on the floor, that explode after a few seconds. Make sure you get off these circles before they explode. These circles will appear on any difficulty, and in any phase (1,2,3,4,5)
+{: .clearfix}
 
-### Ceiling Laser ()
+### Ceiling Laser
+
+![ceiling_laser]({{site.baseurl}}/assets/images/tt/2f/ceiling_laser.gif)
+{: .float-right}
 
 Once in a while, a laser will come from the sky and start chasing a random player. This player will have a flame icon over their head, and is quite obvious to see. You can see it on other players, if you have character display enabled. If you have the laser on you, you have an important task. Some people will be caged (again, you can only see this if you have character display enabled), and to free them you have to run the laser over their cage. Also, sometimes, two people will be linked together by a laser. This link can be broken by having the laser that comes from the sky pass through this link. This can be a bit tedious to break, as it sometimes does not register, but keep trying to break this laser link. The ceiling laser will appear in phases 1,2,3 and 4
 
 This laser also deals some damage to players, if they are hit. On novice and brave, this damage is not too bad, but on legend difficulty, it is around 25% of the HP of a DPS. This means that on legend difficulty, if you have the laser on you, do **not** let the laser cross your party if they are stacked, or it can potentially wipe them. Also make sure you keep moving (can be a small circle), to make sure you don't die yourself.
+{: .clearfix}
 
-### Cage ()
+### Cage
 
 Sometimes, the laser will put a cage on a random person. This cage will prevent you from moving around. On novice and brave this can be a nuisance, on legend this is lethal, as you cannot dodge the circle attacks while being caged. Call out that you're caged, or have the shotcaller call out the caged people, and let the person with the laser on them break them free as soon as possible. While caged, you can still attack the MVP, so make sure you always stay in range so you can continue attacking.. The cages appear in phase 1,2,3 and 4, in brave and legend difficulty
 
-### Laser Link Connection ()
+### Laser Link Connection
 
 Once in a while, a laser link between 2 players will appear. This link can only be broken by the ceiling laser. The laser link has 2 effects, it damages both players and it slows down both players. The damage is dependant on the distance between the two players, so try to stay together as much as you can.
 
 On novice and brave, the damage done is managable, on legend it is not. So try to coordinate and don't go far apart, before the links start. Links can appear in all difficulties, on phase 1,2,3 and 4. In legend difficulty they can also appear on the 5th floor.
+{: .clearfix}
 
-### Laser Wall ()
+### Laser Wall
+
+![laser_wall]({{site.baseurl}}/assets/images/tt/2f/laser_wall.gif)
+{: .float-right}
 
 In phase 2,3,4 on brave and legend difficulty, a wall of lasers can appear that goes from one side of the screen to the other side, covering half of the map. These lasers instantly kill anyone that touches them, so it is important to avoid them. Unfortunately, currently they are not always visible on the screen, or can appear very late. To see the lasers, keep the minimap opened. The lasers will show as a little red dot, going from one side of the screen to the other side. Make sure to be on the other side
 
@@ -65,9 +77,15 @@ In the last phase, at 19% HP, the gameplay actually changes, and your team has t
 
 ### Novice
 
+On novice, the main dangers will be the link between players and the circle explosions. This is a good floor to practice dodging and breaking the laser lines. Just keep damaging, dodging and breaking the lines, and you should be fine.
+
 ### Brave
 
+On brave, the boss will have more HP, and will also add the cage attack to cage people, and a laser sweep. Make sure you keep an eye out for the laser sweep, if you can't see it, make sure the shotcaller keeps an eye on the minimap and calls out. Dodge the circles, break the links, keep an eye on the cages and break those, and you should be fine
+
 ### Legend
+
+On Legend difficulty, the 2nd floor can be one of the more frustrating floors. 
 
 ## Tips
 
