--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -56,6 +56,7 @@ On novice and brave, the damage done is managable, on legend it is not. So try t
 {: .float-right}
 
 In phase 2,3,4 on brave and legend difficulty, a wall of lasers can appear that goes from one side of the screen to the other side, covering half of the map. These lasers instantly kill anyone that touches them, so it is important to avoid them. Unfortunately, currently they are not always visible on the screen, or can appear very late. To see the lasers, keep the minimap opened. The lasers will show as a little red dot, going from one side of the screen to the other side. Make sure to be on the other side
+{: .clearfix}
 
 ### Pewpew
 
