Some more 2F writeup

--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -86,16 +86,36 @@ On brave, the boss will have more HP, and will also add the cage attack to cage 
 
 ### Legend
 
-On Legend difficulty, the 2nd floor can be one of the more frustrating floors. 
+On Legend difficulty, the 2nd floor can be one of the more frustrating floors. At 100%, 59% and 19% HP, the tesseract will cast an explosion. This explosion targets random people, taking them down, usually in one hit. This will cause chaos. Also, people will get linked up right away. The damage of the links is very high, so if you are far away from each other, you can get killed instantly as well. Also, the ceiling laser does a lot of damage, so if that runs through the group, you'll see a lot of dead players.
+
+When starting the instance, everybody gathers in front of the tesseract, in a kind of line so you are close together but not too close. The shotcaller calls to initiate, the tanks will walk forward to the tesseract and all players should follow along. Some people will die when the instance starts due to the explosion, and other people will get linked. Make sure you get close to the person you are linked with, or you will probably die. The tank should taunt the MVP, and DPS should try to put some damage on the MVP to burst it down as soon as possible
+
+After a few people die, usually there will be a bit less chaos and less lines between people. Make sure you stay alive, and don't stray too far from each other. After the circle explosions, get close together again, and try to dodge in the same direction. It is recommended to stay together on one side of the tesseract (the bottom).
+
+At the moment there is a bug, where people can instantly die if they get resurrected before the MVP is down to 59% HP. It is recommended to try and burst the MVP to 59% before resurrecting people.
+
+In the later phases, gravitational bodies will spawn. Make sure you kill them as soon as possible, as they will grow and more will spawn.
+
+In the last phase, only few people will remain. Make sure you collect the keys quick and swiftly, as gravitational bodies and ads will keep spawning. Usually it is the tank who survives here, make sure you call the positions of the keys so they can be collected quickly.
 
 ## Tips
+
+- (Legend) Using movement speed food and a mount, it is possible to run away from the circle explosions, even if you're slowed by the laser between people
+- (Legend) Stick together, but not too close together
 
 ## Roles
 
 ### DPS
 
+Make sure you dodge all the lethal lasers on this floor. If you get targeted by the ceilling laser, try to run in a small circle to keep the laser in a small area, and not damage other players. Try to have about 200k hp to at least survive a single explosion
+
 ### AB
+
+Keep your ressurection skill off auto, and start ressing at 59%. Keep healing to make sure people who get hit don't immediately die
 
 ### Tank
 
+
+
 ### Shotcaller
+
