Added Rikku's feedback

--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -43,11 +43,11 @@ This laser also deals some damage to players, if they are hit. On novice and bra
 
 Sometimes, the laser will put a cage on a random person. This cage will prevent you from moving around. On novice and brave this can be a nuisance, on legend this is lethal, as you cannot dodge the circle attacks while being caged. Call out that you're caged, or have the shotcaller call out the caged people, and let the person with the laser on them break them free as soon as possible. While caged, you can still attack the MVP, so make sure you always stay in range so you can continue attacking.. The cages appear in phase 1,2,3 and 4, in brave and legend difficulty
 
-### Laser Link Connection
+### Watcher's Chains (Laser Link Connection)
 
-Once in a while, a laser link between 2 players will appear. This link can only be broken by the ceiling laser. The laser link has 2 effects, it damages both players and it slows down both players. The damage is dependant on the distance between the two players, so try to stay together as much as you can.
+Once in a while, a laser link between 2 players will appear. This link can only be broken by the ceiling laser. The laser link has 2 effects, it damages both players and it slows down both players. The damage is dependant on the distance between the two players, the time the link exists and the amount of links, so try to stay together as much as you can, and break the links if possible.
 
-On novice and brave, the damage done is managable, on legend it is not. So try to coordinate and don't go far apart, before the links start. Links can appear in all difficulties, on phase 1,2,3 and 4. In legend difficulty they can also appear on the 5th floor.
+On novice and brave, the damage done is managable, on legend it is not. So try to coordinate and don't go far apart, before the links start. Links can appear in all difficulties, on phase 1,2,3 and 4. In legend difficulty they can also appear on the 5th phase.
 {: .clearfix}
 
 ### Laser Wall
@@ -68,11 +68,13 @@ Once in a while, the MVP will spawn monsters. Make sure you kill these monsters 
 
 ### Gravitational Bodies
 
-In the later phases (4th and 5th phase **TODO: CHECK IF 3RD PHASE**), gravitational bodies will spawn around the map. These gravitational bodies are small enemies that have a big circle around them. This circle grows over time if they stay alive. THe gravitational body will do two attacks. One of the attacks pulls players in the circle towards the gravitational body, and the other attack damages the players nearby. If a gravitational body appears, recommended to stop attacking the MVP and kill the gravitational body as soon as possible
+In the later phases (3rd, 4th and 5th phase), gravitational bodies will spawn around the map. These gravitational bodies are small enemies that have a big circle around them. This circle grows over time if they stay alive. THe gravitational body will do two attacks. One of the attacks pulls players in the circle towards the gravitational body, and the other attack damages the players nearby. If a gravitational body appears, recommended to stop attacking the MVP and kill the gravitational body as soon as possible
 
 ### Phase 5
 
-In the last phase, at 19% HP, the gameplay actually changes, and your team has to collect 5 keys to finish off the tesseract MVP. The keys spawn in blue orbs around the map, and have to be collected and brought to the siren NPC in front of the tesseract. Attacking the tesseract in this does not do any damage, but ads and gravitational bodies will spawn in this phase, so try to kill these if possible. Gravitational bodies can stack up quite fast in this phase. Make sure you spread out the team, so you can collect the keys quickly. In legend difficulty however, you can get a laser link between players, so it can be very dangerous to split up.
+In the last phase, at 19% HP, the gameplay actually changes, and your team has to collect 5 keys to finish off the tesseract MVP. The keys spawn in blue orbs around the map, and have to be collected and brought to the siren NPC in front of the tesseract. Attacking the tesseract in this does not do any damage, but ads and gravitational bodies will spawn in this phase, so try to kill these if possible. Gravitational bodies can stack up quite fast in this phase. Make sure you spread out the team, so you can collect the keys quickly.
+
+In legend difficulty however, you can get a laser link between players, so it can be very dangerous to split up. It can be wise to let the DPS die on purpose here, so you'll be sure the tanks survive (they have the highest chance of surviving this last phases). Also, after collecting all 5 keys, you do will have to survive for a bit longer, so don't let your guard down after collecting 5 keys.
 
 ## Difficulties
 
@@ -115,7 +117,7 @@ Keep your ressurection skill off auto, and start ressing at 59%. Keep healing to
 
 ### Tank
 
-
+In the first phases, stay close to the MVP and keep taunting
 
 ### Shotcaller
 
